[package]
name = "mbtmap"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Attach source location to MoonBit traceback"
repository = "https://github.com/NKID00/mbtmap"
readme = "README.md"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
eyre = "0.6.12"
regex = "1.11.0"
sourcemap = "9.0.0"
